--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = 0.3.0
 
 [options]
 packages = find:
+install_requires = file: requirements.txt
 
 [options.entry_points]
 console_scripts = assistant_bot = assistant_bot.main:cli 
