--- a/Dockerfile-pip
+++ b/Dockerfile-pip
@@ -3,13 +3,7 @@
 FROM python:3.11-slim
 
 # Встановимо змінну середовища
-# ENV APP_HOME /app
-
-ENV APP_HOME /app 
-# Keeps Python from generating .pyc files in the container
-ENV PYTHONDONTWRITEBYTECODE 1
-# Turns off buffering for easier container logging
-ENV PYTHONUNBUFFERED 1
+ENV APP_HOME /app
 
 # Встановимо робочу директорію всередині контейнера
 WORKDIR $APP_HOME
@@ -19,22 +13,13 @@ COPY . .
 
 # Встановимо залежності всередині контейнера
 
-
-
-RUN pip install --upgrade pip 
-
 ENV VIRTUAL_ENV=/app/venv
 RUN python -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
-RUN pip install poetry 
-# Project initialization:
-RUN poetry config virtualenvs.create false
-RUN poetry install --no-dev --no-interaction --no-ansi
-RUN poetry build
-
-# RUN poetry install
-# RUN poetry build
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+RUN pip install .
 RUN mkdir $APP_HOME/user_data
 RUN cd $APP_HOME/user_data
 
