--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,27 @@
+[tool.poetry]
+name = "assistant-bot"
+version = "0.8.0"
+description = "assistant_bot_test"
+authors = ["team11"]
+license = "MIT"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+importlib-metadata = { version = "^1.0.0", python = "<3.8" }
+prompt-toolkit = "^3.0.39"
+rich = "^13.5.2"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+
+[tool.poetry.scripts]
+assistant_bot = "assistant_bot.main:cli"
+
 [build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[build-system-setup]
 requires = ["setuptools >= 65.0.0"]
 build-backend = "setuptools.build_meta"
